--- a/src/style/login.css
+++ b/src/style/login.css
@@ -12,6 +12,9 @@
     padding: 10px;
     border-radius: 6px;
 }
+.checkbox{
+    zoom: 1.3;
+}
 .space-align-container {
     height: 25%;
     display: block;
@@ -23,6 +26,8 @@
   }
 .page {
     background-color: #f5f5f5;
+    width: 100%; 
+    height: 100%;
 }
 
 
